add section info

--- a/index.html
+++ b/index.html
@@ -33,7 +33,12 @@
          </section>
          <!-- /HERO -->
 
-         <section></section>
+         <section id="info">
+            <div class="page-info">
+                <p>En nuestra pagina vas a poder encontrar todas tus recetas favoritas, recetas faciles y rapidas, o recetas para compatir con tus amigos en alguna ocasion especial!</p>
+            </div>
+
+         </section>
     </main>
 
 </body>
